# pytrade

./: .gitignore  CLAUDE.md  README.md  format.ps1  pyproject.toml
.claude/skills/option_strategy/: SKILL.md
pytrade/: constants.py  utils.py
pytrade/allocation/: optimize.py
pytrade/cli/: __main__.py  main.py
pytrade/data_models/: analytics.py  base.py  distributions.py  models.py  option.py  options.py  portfolio.py  sequences.py  simulation.py  stock.py  transformers.py
pytrade/integrations/: base.py  yfinance_data.py
pytrade/models/: loaders.py  models.py  serializer.py
pytrade/models/vix_returns/: model.py
pytrade/portfolio/: __init__.py  base.py  config.py  main.py  optimize.py
pytrade/simulation/: __init__.py  base.py  constants.py  main.py  option_strategy.py  simulation.py  simulator.py  utils.py  withdrawal_rates.py
pytrade/simulation/config/: confsim.json  options.json  portfolio.json
pytrade/strategies/: option_rolling.py  portfolio.py
pytrade/utils/: statistics.py  utils.py
pytrade/valuation/: dcf.py
tests/unit/: test_simulation.py  test_utils.py
