[tool.poetry]
name = "pytrade"
version = "0.1.0"
description = "A package to optimize investment portfolios"
authors = ["frmendonca <francisco.tmendonca@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "~2.2.1"
yfinance = "~0.2.37"
scipy = "~1.12.0"
pyarrow = "~15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
