[tool.poetry]
name = "pytrade"
version = "0.1.0"
description = "A package to optimize investment portfolios"
authors = ["frmendonca <francisco.tmendonca@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "~2.2.1"
yfinance = "*"
matplotlib = "*"
scipy = "~1.12.0"
pyarrow = "~15.0.0"
typer = "0.7"
finvizfinance = "1.0.1"
statsmodels = "0.14.2"
lightgbm = "*"
scikit-learn = "*"
seaborn = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
