[tool.poetry]
name = "pytrade"
version = "0.1.0"
description = "A package to optimize investment portfolios"
authors = ["frmendonca <francisco.tmendonca@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "~2.2.1"
yfinance = "*"
matplotlib = "*"
scipy = "~1.12.0"
pyarrow = "~15.0.0"
typer = "0.7"
finvizfinance = "1.0.1"
statsmodels = "0.14.2"
lightgbm = "*"
scikit-learn = "*"
seaborn = "*"

[tool.poetry.group.test.dependencies]
pytest-randomly = "^3.15.0"
pytest = "^8.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"      # Code formatter
flake8 = "^6.0.0"     # Linter

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
